se agrego cuadro a proyectos

--- a/porfolio/src/App.css
+++ b/porfolio/src/App.css
@@ -2,11 +2,12 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+
+.fondo {
+  background-image:url(./img//marco.jpg);
+ 
+
+  
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -36,4 +37,8 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.fondo {
+  background-color: aqua;
 }
