--- a/porfolio/src/App.css
+++ b/porfolio/src/App.css
@@ -1,14 +1,29 @@
 #root {
   text-align: center;
+  background-color: rgb(20, 85, 177);
 }
 
 
 .fondo {
-  background-image:url(./img//marco.jpg);
- 
+  background-image:url(./assets/marco.jpg);
+  width: 800px;
+  height: 800px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   
 }
+
+.computadora {
+  background-image:url(./assets/compu.jpg);
+  height: 800px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+}
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
@@ -39,6 +54,88 @@
   color: #888;
 }
 
-.fondo {
-  background-color: aqua;
+.hardSkills__container {
+  padding-top: 60px;
+  padding-inline: 10px;
+  background: var(--background-white);
+}
+
+.hardSkills__title {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.hardSkills__dashboard {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.hardSkills__item-container {
+  width: 140px;
+  border: 2px solid lightblue;
+  margin: 5px;
+  height: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: 1s;
+}
+
+.hardSkills__item-container:hover {
+  border:1px solid blue;
+  box-shadow: 4px 4px 4px #CCC;
+  transform: scale(1.1);
+}
+
+.hardSkills__item-image {
+  width: 70px;
+}
+
+.hardSkills__item-title {
+  font-size: 0.8rem;
+  text-align: center;
+  margin: 0;
+  padding-top: 5px;
+  font-weight: bold;
+}
+
+@media screen and (min-width: 768px) {
+
+  .hardSkills__container {
+      display: flex;
+      justify-content: center;
+      min-height: 100vh;
+      align-items: center;
+  }
+
+  .hardSkills__container-data {
+      width: 85vw;
+  }
+
+}
+
+@media screen and (min-width: 1024px) {
+
+  .hardSkills__container-data {
+      width: 75vw;
+  }
+
+  .hardSkills__container {
+      align-items: center;
+      height: 100vh;
+  }
+
+}
+
+.div-stack {
+  background-image: linear-gradient(to right, #916969, #2020d7)
+
+}
+
+.project {
+  margin-top: 20px;
+  overflow-y: hidden; /* Muestra el scroll vertical */
 }
