--- a/porfolio/src/App.css
+++ b/porfolio/src/App.css
@@ -3,6 +3,7 @@
   background-image:url(./assets/piedras.jpg);
   background-repeat: repeat;
  
+ 
 }
 
 .fondo {
@@ -13,9 +14,10 @@
   background-repeat: no-repeat;
   background-size: cover;
   @media (max-width: 576px) {
+    margin: 0;
     background-image:url(./assets/marco.jpg);
-    width: 460px;
-    height: 400px;
+    width: 390px;
+    height: 370px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -29,7 +31,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   @media (max-width: 1500px) {
-    height: 400px;
+    height: 550px;
     background-image:none;
   }
 }
@@ -170,8 +172,12 @@
   align-items: center;
   justify-content: center;
   @media (max-width: 576px) {
-    height: 300px;
-    margin-top: 11%;
+    margin-left: 0;
+    padding-left: 0;
+    width: 420px;
+    margin: 0% ,20%,0%,0%;
+    height: 278px;
+    margin-top: 13%;
     background-color: rgb(234, 220, 205);
     display: flex;
     align-items: center;
