--- a/porfolio/src/App.css
+++ b/porfolio/src/App.css
@@ -27,14 +27,21 @@
 }
  
 .computadora {
-  background-image:url(./assets/compu.jpg);
-  height: 800px;
+  
+  background-image:url(./assets/marco2.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
-  @media (max-width: 1500px) {
+  background-size:cover;
+  width: 700px;
+  height: 880px ;
+ 
+   @media (max-width: 1000px) {
     height: 550px;
-    background-image:none;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+    width: 300px;
+   
   }
 }
 .logo {
