--- a/porfolio/src/App.css
+++ b/porfolio/src/App.css
@@ -14,6 +14,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   @media (max-width: 1000px) {
+    overflow: auto;
     margin: 0;
     background-image:url(./assets/marco.jpg);
     width: 300px;
@@ -35,8 +36,9 @@
   width: 700px;
   height: 880px ;
  
-   @media (max-width: 1000px) {
+   @media (max-width: 800px) {
     height: 550px;
+    overflow-y: auto;
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
