--- a/porfolio/src/Components/About/About.module.css
+++ b/porfolio/src/Components/About/About.module.css
@@ -13,7 +13,7 @@
        
      @media (max-width: 800px) {
       height: 550px;
-      width: 440px;
+      width: 100%;
       margin-top: 1%;
       
      
