--- a/porfolio/src/Components/Projects/Projects.module.css
+++ b/porfolio/src/Components/Projects/Projects.module.css
@@ -3,39 +3,51 @@
   
   }
   
-.madera {
+/* .madera {
     background-image:url(../../assets/marco.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
-    padding-top: 5%;
-    padding-left: 5%;
+    height: 700px;
+  
+  
    
         
-  @media (max-width: 1000px) {
-    
+  @media (max-width: 1200px) {
+    height: 100vh;
     background-image: none;
     background-color: antiquewhite;
-    height: 520px;
+    border: 10px solid black;
        
   }
-  @media (min-width: 1500px) {
-    
+  @media (min-width: 1400px) {
+    height: 100vh;
     background-image: none;
     background-color: antiquewhite;
+    border: 10px solid black;
+  
        
   }
-}
+} */
 
+.madera {
+  height: 700px;
+  width: 100%;
+  background-color: antiquewhite;
+  border: 10px solid black;
+}
   
 .carousel {
-  
-   margin: 5%;
-  
+
+ 
+  margin-left: 10%;
+  padding-top: 10%;
+ 
 }
+
 .projectCard {
     
-    padding: 5%;
+
     background-color: rgb(234, 220, 205);
     display: flex;
     align-items: center;
