--- a/porfolio/src/Components/About/About.module.css
+++ b/porfolio/src/Components/About/About.module.css
@@ -3,16 +3,16 @@
     flex-direction: column;
     align-content: center;
     justify-content: center;
-    margin: auto;
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: auto;
     background-image:url(../../assets/marco2.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
     background-size:cover;
     width: 700px;
-    height: 100vh ;
+    height: 900px ;
        
      @media (max-width: 800px) {
-      height: 550px;
+      height: 650px;
       width: 100%;
       margin-top: 1%;
       
