--- a/porfolio/src/Components/About/About.module.css
+++ b/porfolio/src/Components/About/About.module.css
@@ -11,7 +11,9 @@
     width: 700px;
     height: 900px ;
        
-     @media (max-width: 800px) {
+     @media (max-width: 700px) {
+      background-image: none;
+      background-color: rgb(244, 242, 240);
       height: 650px;
       width: 100%;
       margin-top: 1%;
