--- a/porfolio/src/Components/Stack/Stack.module.css
+++ b/porfolio/src/Components/Stack/Stack.module.css
@@ -1,21 +1,16 @@
 .divStack {
-    /* 1. Estilo de la "pared" de fondo */
-    background-color: #e0e0e0; /* Un color de pared neutro */
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23cccccc' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-    padding: 8rem 2rem; /* Más padding para que el marco se vea "colgado" */
-    position: relative;
-    width: 100%;
-    height: 150%;
+    margin-top: 20px;
+   
    
 }
 
 .hardSkills__container {
     /* 2. Estilo del "marco del cuadro" */
-    display: flex;
+   
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    max-width: 1200px; /* Ajustado para un ancho máximo razonable */
+    max-width: 100%; /* Ajustado para un ancho máximo razonable */
     margin: 0 auto; /* Centra el cuadro en la pared */
     background: #fdf6e3; /* Color del paspartú (el cartón interior) */
     color: #333; /* Color de texto oscuro para que contraste con el fondo claro */
@@ -26,9 +21,7 @@
    
 }
 
-.hardSkills__container:hover {
-    transform: rotate(0deg) scale(1.02); /* Efecto al pasar el ratón por encima */
-}
+
 
 .hardSkills__containerdata {
     display: flex;
